Fix colorKeyBubble vertical alignment

--- a/src/colorKeyBubble.styl
+++ b/src/colorKeyBubble.styl
@@ -16,6 +16,7 @@
 		height 1em
 		border-radius 50%
 		border 2px solid white
+		padding-top 0.3em
 
 		&.empty
 			border-color #cadbe5
